crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaGatewayStationMessage PamojaGatewayStationMessage;
typedef struct {
  int64_t rctx;
  int64_t xtime;
  int64_t gpstime;
  bool has_gpstime;
  double rssi;
  double snr;
} PamojaGatewayStationLevels;
typedef struct {
  uint8_t data_rate;
  uint32_t frequency_hz;
  bool present;
} PamojaGatewayStationWindow;
typedef struct {
  uint8_t kind;
  uint8_t mhdr;
  uint8_t join_eui[8];
  uint8_t dev_eui[8];
  uint16_t dev_nonce;
  int32_t dev_addr;
  uint8_t fctrl;
  uint16_t fcnt;
  uint8_t fport;
  bool has_fport;
  int32_t mic;
  uint8_t data_rate;
  uint32_t frequency_hz;
  PamojaGatewayStationLevels levels;
  uint8_t class_;
  int64_t diid;
  uint8_t rx_delay;
  bool has_rx_delay;
  uint8_t priority;
  uint32_t protocol;
  double max_eirp;
  uint32_t freq_min_hz;
  uint32_t freq_max_hz;
  bool filters_networks;
  uintptr_t net_id_count;
  uintptr_t join_range_count;
  uintptr_t data_rate_count;
  uintptr_t broadcast_count;
  PamojaGatewayStationWindow rx1;
  PamojaGatewayStationWindow rx2;
  PamojaGatewayStationWindow ping_slot;
  int64_t xtime;
  bool has_xtime;
  int64_t rctx;
  bool has_rctx;
  int64_t gpstime;
  bool has_gpstime;
  double txtime;
  bool has_txtime;
} PamojaGatewayStationFields;
typedef struct {
  uint64_t first;
  uint64_t last;
} PamojaGatewayStationJoinRange;
typedef struct {
  uint8_t spreading_factor;
  uint32_t bandwidth_hz;
  bool downlink_only;
  bool defined;
} PamojaGatewayStationDataRate;
typedef struct {
  uint8_t data_rate;
  uint32_t frequency_hz;
  uint8_t priority;
  int64_t gpstime;
  bool has_gpstime;
  int64_t rctx;
  bool has_rctx;
} PamojaGatewayStationBroadcast;
typedef struct {
  uint8_t router[8];
  bool has_router;
  uint8_t muxs[8];
  bool has_muxs;
} PamojaGatewayStationRouterIds;
typedef struct {
  uint8_t unit;
  uint8_t session;
  uint64_t micros;
} PamojaGatewayStationXtime;
PamojaGatewayStationMessage *pamoja_gateway_station_heard(const uint8_t *frame,
                                                          uintptr_t frame_len,
                                                          uint8_t data_rate,
                                                          uint32_t frequency_hz,
                                                          PamojaGatewayStationLevels levels);
PamojaGatewayStationMessage *pamoja_gateway_station_message_parse(const uint8_t *text,
                                                                  uintptr_t text_len);
PamojaGatewayStationMessage *pamoja_gateway_station_message_new(const PamojaGatewayStationFields *fields);
PamojaStatus pamoja_gateway_station_message_json(const PamojaGatewayStationMessage *message,
                                                 PamojaBuffer **out_text);
uint8_t pamoja_gateway_station_message_kind(const PamojaGatewayStationMessage *message);
PamojaStatus pamoja_gateway_station_message_fields(const PamojaGatewayStationMessage *message,
                                                   PamojaGatewayStationFields *out_fields);
PamojaStatus pamoja_gateway_station_message_payload(const PamojaGatewayStationMessage *message,
                                                    PamojaBuffer **out_payload);
PamojaStatus pamoja_gateway_station_message_options(const PamojaGatewayStationMessage *message,
                                                    PamojaBuffer **out_options);
PamojaStatus pamoja_gateway_station_message_text(const PamojaGatewayStationMessage *message,
                                                 uint8_t field,
                                                 PamojaBuffer **out_text);
PamojaStatus pamoja_gateway_station_message_set_text(PamojaGatewayStationMessage *message,
                                                     uint8_t field,
                                                     const uint8_t *text,
                                                     uintptr_t text_len);
PamojaStatus pamoja_gateway_station_message_set_payload(PamojaGatewayStationMessage *message,
                                                        const uint8_t *bytes,
                                                        uintptr_t bytes_len);
PamojaStatus pamoja_gateway_station_message_set_options(PamojaGatewayStationMessage *message,
                                                        const uint8_t *bytes,
                                                        uintptr_t bytes_len);
PamojaStatus pamoja_gateway_station_message_add_net_id(PamojaGatewayStationMessage *message,
                                                       uint32_t net_id);
PamojaStatus pamoja_gateway_station_message_add_join_range(PamojaGatewayStationMessage *message,
                                                           const PamojaGatewayStationJoinRange *range);
PamojaStatus pamoja_gateway_station_message_add_data_rate(PamojaGatewayStationMessage *message,
                                                          const PamojaGatewayStationDataRate *rate);
PamojaStatus pamoja_gateway_station_message_add_broadcast(PamojaGatewayStationMessage *message,
                                                          const PamojaGatewayStationBroadcast *frame,
                                                          const uint8_t *pdu,
                                                          uintptr_t pdu_len);
PamojaStatus pamoja_gateway_station_message_net_id(const PamojaGatewayStationMessage *message,
                                                   uintptr_t index,
                                                   uint32_t *out_net_id);
PamojaStatus pamoja_gateway_station_message_join_range(const PamojaGatewayStationMessage *message,
                                                       uintptr_t index,
                                                       PamojaGatewayStationJoinRange *out_range);
PamojaStatus pamoja_gateway_station_message_data_rate(const PamojaGatewayStationMessage *message,
                                                      uintptr_t index,
                                                      PamojaGatewayStationDataRate *out_rate);
PamojaStatus pamoja_gateway_station_message_broadcast(const PamojaGatewayStationMessage *message,
                                                      uintptr_t index,
                                                      PamojaGatewayStationBroadcast *out_frame,
                                                      PamojaBuffer **out_pdu);
void pamoja_gateway_station_message_free(PamojaGatewayStationMessage *message);
PamojaStatus pamoja_gateway_station_discovery(const uint8_t *router, PamojaBuffer **out_text);
PamojaStatus pamoja_gateway_station_discovery_parse(const uint8_t *text,
                                                    uintptr_t text_len,
                                                    uint8_t *out_router);
PamojaStatus pamoja_gateway_station_router_accepted(const uint8_t *router,
                                                    const uint8_t *muxs,
                                                    const uint8_t *uri,
                                                    uintptr_t uri_len,
                                                    PamojaBuffer **out_text);
PamojaStatus pamoja_gateway_station_router_refused(const uint8_t *router,
                                                   const uint8_t *error,
                                                   uintptr_t error_len,
                                                   PamojaBuffer **out_text);
PamojaStatus pamoja_gateway_station_router_parse(const uint8_t *text,
                                                 uintptr_t text_len,
                                                 PamojaBuffer **out_uri,
                                                 PamojaBuffer **out_error);
PamojaStatus pamoja_gateway_station_router_identities(const uint8_t *text,
                                                      uintptr_t text_len,
                                                      PamojaGatewayStationRouterIds *out_ids);
PamojaStatus pamoja_gateway_station_xtime(uint8_t unit,
                                          uint8_t session,
                                          uint64_t micros,
                                          int64_t *out_value);
PamojaStatus pamoja_gateway_station_xtime_parts(int64_t value,
                                                PamojaGatewayStationXtime *out_parts);
PamojaStatus pamoja_gateway_station_id6(const uint8_t *eui, PamojaBuffer **out_text);
PamojaStatus pamoja_gateway_station_eui_of(const char *text, uint8_t *out_eui);